# Banana

./: README.md  flake.nix  meson.build
.direnv/: flake-profile-4-link
banana/: banana.in  main.py  meson.build
banana/modules/: utils.py
banana/modules/gamebanana/: __init__.py  meson.build  types.py
banana/ui/: nav.py  page_bar.py  submission.py
banana/ui/pages/: downloads.py  home.py  meson.build  search.py
banana/ui/pages/submissions/: __init__.py  download.py  html.py  meson.build  mod.py  news.py  wip.py  (+1 more)
data/: banana.gresource.xml  com.github.XtremeTHN.Banana.desktop  meson.build  style.css
data/ui/: download-item.blp  download-page.blp  downloads-page.blp  home-page.blp  meson.build  mod-button.blp  mod-download.blp  mod-page-dialog.blp  mod-page.blp  navigation.blp  news-page.blp  page-bar.blp  screenshot.blp  search-page.blp  sidebar-mod.blp  sidebar.blp  submission-button.blp  top-mod.blp  top-submission.blp  window.blp  wip-page.blp
mockup/download-row/: main.blp  main.css  settings
mockup/mod_page/: icons.gresource  icons.gresource.xml  main.blp  main.css  main.py  settings
mockup/mod_preview/: main.blp  main.css  main.py  settings
src/: banana.in  main.py  meson.build
src/modules/: cache.py  meson.build  utils.py
src/modules/gamebanana/: __init__.py  types.py
src/ui/: home.py  meson.build  mod.py  nav.py  page_bar.py  pages.py  popover.py  screenshot.py  search.py  submission.py  window.py
src/ui/pages/: downloads.py  home.py  meson.build  search.py
src/ui/pages/submissions/: download.py  meson.build  mod.py  utils.py  wip.py
